<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgcolor"
        android:orientation="vertical">


        <TextView
            android:id="@+id/item_custom_text"
            android:layout_width="261dp"
            android:layout_height="75dp"
            android:layout_marginTop="44dp"
            android:text="@string/high_line"
            android:textAlignment="center"
            android:textColor="#050303"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="421dp"
            android:layout_height="261dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_custom_text"
            app:layout_constraintVertical_bias="0.015"
            app:srcCompat="@drawable/high_line2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="384dp"
            android:layout_height="227dp"
            android:layout_marginTop="24dp"
            android:text="@string/text4"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.623"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.082" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="319dp"
            android:layout_height="73dp"
            android:layout_marginTop="20dp"
            android:background="#CFD8F8"
            android:text="@string/list_specs4"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Widget.AppCompat.ListView"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.595"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:text="Jose Perez" />

</LinearLayout>