<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
=======
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>>>>>>> sprint_2
    tools:context=".ui.MainActivity"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgcolor"
        android:orientation="vertical">


        <TextView
            android:id="@+id/item_custom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/central_park"
            android:textAlignment="center"
            android:textColor="#050303"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="409dp"
            android:layout_height="212dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_custom_text"
            app:layout_constraintVertical_bias="0.031"
            app:srcCompat="@drawable/central_park2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="323dp"
            android:layout_height="243dp"
            android:layout_marginTop="24dp"
            android:text="@string/text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="319dp"
            android:layout_height="73dp"
            android:layout_marginTop="20dp"
            android:background="#CFD8F8"
            android:text="@string/list_specs"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Widget.AppCompat.ListView"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.16" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:text="Jose Perez" />

<<<<<<< HEAD
</LinearLayout>
=======
</LinearLayout>
</ScrollView>
>>>>>>> sprint_2
